# minitracker-codex

./: Makefile  PHASE_2_ONWARD_EXECUTION_PLAN.md  README.md
backend/: Cargo.toml  README.md  mini-tracker.db
backend/migrations/: 20260218110000_init_schema.sql
backend/src/: lib.rs  main.rs
backend/tests/: games.rs  model_definitions.rs  user_models.rs
frontend/: Cargo.toml  index.html  style.css
frontend/src/: main.rs
